--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
     <h1>SnapFace</h1>
+    <nav>
+        <li><a href="">home</a></li>
+        <li><a href="facesnaps">Facesnps</a></li>
+    </nav>
 </header>
